# RAGMedicalChatBotProduction

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/backend/: api.py
app/components/: data_loader.py  embedding.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
app/frontend/: ui.py
